# dosemetrics

./: .dockerignore  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  HF_README.md  Makefile  README.md  app.py  deploy_to_hf.sh  mkdocs.yml  pyproject.toml  requirements.txt  requirements_ui.txt  run_streamlit_app.sh  setup.py  todo.md
.claude/: settings.json
docs/: changelog.md  contributing.md  design-prompts.md  index.md
dosemetrics/: compliance.py  data_utils.py  dvh.py  dvh_family.py  mirage_app.py  plot.py  scores.py
examples/: DVH_per_case.ipynb  DVH_per_oar.ipynb  Gamma analysis.ipynb  compare_predicted_dvh.py  compare_quality_index.py  comprehensive_analysis_example.py  compute_geometric_difference.py  compute_gradient.py  evaluate_differences.py  generate_dvh_family.py  generate_dvh_variation.py  generate_dvh_variation_updated.py  plot_all_dvh.py  plot_all_dvh_per_case.py  plot_compliance.py  plot_dvh_from_eclipse_txt.py  plot_dvh_from_nifti.py  plot_dvh_interactive.py  plot_dvh_per_case.py  plot_frequency.py  plot_per_oar_dvh.py  plot_predicted_doses.py  plot_predicted_dvh.py  plot_predicted_dvh_per_case.py  plot_stats.py  print_dvh_constraint.py  print_quality_index.py  read_plan.py  report_scores_for_subject.py  report_target_differences.py  report_target_differences_training.py  run_mirage_analysis.py  run_mirage_analysis_per_structure.py  run_mirage_analysis_v2.py  visualize_dose_differences.py  visualize_doses.py
scripts/: anonymize_data.py  deploy_to_hf.sh  fix_target_references.py  run_streamlit_app.sh  run_tests.sh  setup_repo.sh  (+3 more)
(+122 files in other folders)
