[project]
name = "dosemetrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair~=5.4.0",
    "gpssi>=0.1.2",
    "matplotlib~=3.8.2",
    "nibabel==5.2.1",
    "numpy~=1.26.2",
    "pandas>=2.1.4",
    "pillow==10.4.0",
    "plotly~=5.23.0",
    "simpleitk>=2.4",
    "streamlit~=1.45.0",
]

[tool.setuptools.packages.find]
include = ["dosemetrics*"]